add comment function, new post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,9 @@ layout: default
 <article class="post-content">
   {{ content }}
 </article>
+{% if site.disqus.shortname %}
+  {% include disqus_comments.html %}
+{% endif %}
 
 {% if site.jekyll-archives %}
 {% if page.tags.size > 0 %}
