--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,13 @@
 
     <div class="site-signature">
       <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
-      <p class="text">{{ site.description }}</p>
+      <p class="text">
+        <!-- {{ site.description }} -->
+        
+        상호명 : 영어문
+        대표자명 : 한윤숙
+        사업자등록번호 : 397-05-01460
+      </p>
     </div>
 
   </div>
