--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,9 +46,9 @@
       <p class="text">
         <!-- {{ site.description }} -->
         
-        상호명 : 영어문
-        대표자명 : 한윤숙
-        사업자등록번호 : 397-05-01460
+        상호명 : 영어문<br>
+        대표자명 : 한윤숙<br>
+        사업자등록번호 : 397-05-01460<br>
       </p>
     </div>
 
